store en el omponente hijo y acciones con payload

--- a/02-redux-app/src/app/contador/hijo/hijo.component.html
+++ b/02-redux-app/src/app/contador/hijo/hijo.component.html
@@ -1,3 +1,16 @@
-<p>
-  hijo works!
-</p>
+<div class="row">
+    <div class="col">
+        <h1>Contador</h1>
+        <div>{{ contador }}</div>
+    </div>
+</div>
+
+
+<div class="row text-center">
+    <div class="col">
+        <button (click)="multiplicar()" class="btn btn-primary mr-2">Multiplicar</button>
+        <button (click)="dividir()" class="btn btn-info">Dividir</button>
+    </div>
+</div>
+
+<hr>
