accion reset desde el nieto

--- a/02-redux-app/src/app/contador/nieto/nieto.component.html
+++ b/02-redux-app/src/app/contador/nieto/nieto.component.html
@@ -1,3 +1,15 @@
-<p>
-  nieto works!
-</p>
+<div class="row">
+    <div class="col">
+        <h1>Contador</h1>
+        <div>{{ contador }}</div>
+    </div>
+</div>
+
+
+<div class="row text-center">
+    <div class="col">
+        <button (click)="reset()" class="btn btn-danger">Reset</button>
+    </div>
+</div>
+
+<hr>
