--- a/03-todoapp/src/app/todo/todo-item/todo-item.component.html
+++ b/03-todoapp/src/app/todo/todo-item/todo-item.component.html
@@ -1,9 +1,18 @@
 <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-<li class="completed">
+<li [ngClass]="{'completed': todo.completado,
+                'editing': editando}">
     <div class="view">
-        <input class="toggle" type="checkbox" checked>
-        <label>Salvar el mundo</label>
+        <input class="toggle"
+                type="checkbox"
+                [formControl]="checkField"
+                [checked]="todo.completado">
+
+        <label (dblclick)="editar()">{{ todo.texto }}</label>
         <button class="destroy"></button>
     </div>
-    <input class="edit" value="Salvar al mundo">
+    <input class="edit"
+            [value]="todo.texto"
+            [formControl]="txtInput"
+            (blur)="terminarEdicion()"
+            #txtInputFisico>
 </li>
