--- a/03-todoapp/src/app/todo/todo-item/todo-item.component.html
+++ b/03-todoapp/src/app/todo/todo-item/todo-item.component.html
@@ -2,17 +2,10 @@
 <li [ngClass]="{'completed': todo.completado,
                 'editing': editando}">
     <div class="view">
-        <input class="toggle"
-                type="checkbox"
-                [formControl]="checkField"
-                [checked]="todo.completado">
+        <input class="toggle" type="checkbox" [formControl]="checkField" [checked]="todo.completado">
 
         <label (dblclick)="editar()">{{ todo.texto }}</label>
-        <button class="destroy"></button>
+        <button class="destroy" (click)="borrar()"></button>
     </div>
-    <input class="edit"
-            [value]="todo.texto"
-            [formControl]="txtInput"
-            (blur)="terminarEdicion()"
-            #txtInputFisico>
+    <input class="edit" [value]="todo.texto" [formControl]="txtInput" (blur)="terminarEdicion()" #txtInputFisico>
 </li>
